Добавляет новую версию таблицы

--- a/source/sass/blocks/table-fixed.scss
+++ b/source/sass/blocks/table-fixed.scss
@@ -1,168 +1,44 @@
-// .table-fixed {
-//   position: relative;
-//   max-height: 463px;
-//   overflow-x: auto;
-//   overflow-y: hidden;
-
-//   &--popup {
-//     margin-left: 32px;
-//     margin-right: 32px;
-//   }
-// }
-
-// .table-fixed__table {
-//   position: relative;
-//   table-layout: fixed;
-//   width: $desktop-width;
-//   max-height: 463px;
-
-//   & tbody {
-//     display: block;
-//     max-height: 463px;
-//     overflow: auto;
-//   }
-
-//   & th {
-//     width: 191px;
-//     padding-right: 40px;
-//     padding-bottom: 16px;
-//     font-weight: 500;
-//     font-size: rem(15px);
-//     line-height: rem(20px);
-//     color: var(--color-text, $grey);
-//     text-align: left;
-//     vertical-align: middle;
-//     // white-space: nowrap;
-//     line-clamp: 3;
-
-//     @media (max-width: $tablet-width - 1) {
-//       width: 142px;
-//       padding-right: 32px;
-//       font-size: rem(13px);
-//       line-height: rem(17px);
-//     }
-
-//     &:first-child {
-//       width: 118px;
-
-//       @media (max-width: $tablet-width - 1) {
-//         width: 100px;
-//       }
-//     }
-//   }
-
-//   & td {
-//     width: 191px;
-//     padding-top: 16px;
-//     padding-bottom: 16px;
-//     padding-right: 40px;
-//     font-size: rem(13px);
-//     line-height: rem(17px);
-//     color: var(--color-text, $dark-text);
-//     text-align: left;
-//     vertical-align: middle;
-//     line-clamp: 2;
-
-//     @media (max-width: $tablet-width - 1) {
-//       width: 142px;
-//       padding-right: 32px;
-//     }
-
-//     &:first-child {
-//       width: 118px;
-
-//       @media (max-width: $tablet-width - 1) {
-//         width: 100px;
-//       }
-//     }
-//   }
-
-//   & tr {
-//     width: 100%;
-//     background-image: linear-gradient(var(--color-stroke, #f5f6f7), var(--color-stroke, #f5f6f7));
-//     background-position: left bottom;
-//     background-repeat: no-repeat;
-//     background-size: 100% 1px;
-//   }
-
-//   & thead {
-//     display: block;
-//     width: 100%;
-//     background-color: var(--color-bg-secondary, $white);
-//     // box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
-
-//     & tr {
-//       background-image: linear-gradient(var(--color-stroke, $light-grey), var(--color-stroke, $light-grey));
-//     }
-//   }
-
-//   & .scroll-content {
-//     padding-bottom: 66px;
-//   }
-// }
-
-// .table-fixed--all-screen {
-//   width: $desktop-width;
-//   margin: 0 auto;
-//   max-height: 100%;
-//   padding-top: 24px;
-
-//   & tbody {
-//     max-height: 100vh;
-//   }
-
-//   & thead.shadow {
-//     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
-//   }
-
-//   & td {
-//     &:nth-child(4),
-//     &:nth-child(5) {
-//       width: 280px;
-//     }
-//   }
-
-//   & th {
-//     &:nth-child(4),
-//     &:nth-child(5) {
-//       width: 280px;
-//     }
-//   }
-
-//   @media (max-width: $tablet-width - 1) {
-//     padding-left: 15px;
-//     padding-right: 15px;
-//   }
-// }
-
 .table-fixed {
   position: relative;
-  max-height: 463px;
-  overflow: auto;
-
-  // & .scrollbar-thumb {
-  //   background-color: var(--color-bg-secondary, $light-grey);
-  // }
-}
-
-.table-fixed__container {
-  position: relative;
-}
-
-.table-fixed__header {
-  position: sticky;
-  top: 0;
-  z-index: 10;
-  background-color: $white;
   width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+
+  & .simplebar-scrollbar::before {
+    background-color: var(--color-bg-secondary, $light-grey);
+  }
+
+  & .simplebar-track {
+    background-color: var(--color-bg-secondary, $white);
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 11px;
+    z-index: 10;
+    width: 100%;
+    height: 16px;
+    background-image: linear-gradient(270deg, var(--color-bg-secondary, $white) 0%, var(--color-bg-secondary-transparent, rgba($white, 0)) 100%);
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 16px;
+    height: 100%;
+    background-image: linear-gradient(270deg, var(--color-bg-secondary, $white) 0%, var(--color-bg-secondary-transparent, rgba($white, 0)) 100%);
+  }
+
+  &--popup {
+    margin-bottom: 32px;
+  }
 }
 
-.table-fixed__body {
-  width: 100%;
-}
-
-table {
-  position: relative;
+.table-fixed__table {
   table-layout: fixed;
   border-collapse: collapse;
 
@@ -180,7 +56,7 @@ table {
     line-clamp: 3;
 
     @media (max-width: $tablet-width - 1) {
-      width: 142px;
+      width: 152px;
       padding-right: 32px;
       font-size: rem(13px);
       line-height: rem(17px);
@@ -191,6 +67,12 @@ table {
 
       @media (max-width: $tablet-width - 1) {
         width: 100px;
+      }
+    }
+
+    &.table-fixed__long-name {
+      @media (max-width: $tablet-width - 1) {
+        width: 191px;
       }
     }
   }
@@ -208,7 +90,7 @@ table {
     line-clamp: 2;
 
     @media (max-width: $tablet-width - 1) {
-      width: 142px;
+      width: 152px;
       padding-right: 32px;
     }
 
@@ -217,6 +99,12 @@ table {
 
       @media (max-width: $tablet-width - 1) {
         width: 100px;
+      }
+    }
+
+    &.table-fixed__long-name {
+      @media (max-width: $tablet-width - 1) {
+        width: 191px;
       }
     }
   }
@@ -228,61 +116,71 @@ table {
     background-repeat: no-repeat;
     background-size: 100% 1px;
   }
+}
 
-  & thead {
-    width: 100%;
-    background-color: var(--color-bg-secondary, $white);
+.table-fixed__header {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  min-width: $desktop-width;
+  background-color: var(--color-bg-secondary, $white);
 
-    & tr {
-      background-image: linear-gradient(var(--color-stroke, $light-grey), var(--color-stroke, $light-grey));
-    }
-  }
-
-  & .scroll-content {
-    padding-bottom: 66px;
+  & tr {
+    background-image: linear-gradient(var(--color-stroke, $light-grey), var(--color-stroke, $light-grey));
   }
 }
+
+.table-fixed__body {
+  width: 100%;
+  min-width: $desktop-width;
+  max-height: 386px;
+  overflow-y: auto;
+  overflow-x: hidden;
+
+  & .simplebar-vertical {
+    right: 16px;
+  }
+}
+
 
 .table-fixed--all-screen {
   margin: 0 auto;
   max-height: 100%;
-  padding-top: 80px;
 
-  & tr {
-    display: flex;
-    align-items: center;
-    width: $desktop-width;
-    margin: 0 auto;
+  & td.table-fixed__long-name {
+    width: 280px;
   }
 
-  & td {
-    &:nth-child(4),
-    &:nth-child(5) {
-      width: 280px;
-    }
-  }
-
-  & th {
-    &:nth-child(4),
-    &:nth-child(5) {
-      width: 280px;
-    }
-  }
-
-  @media (max-width: $tablet-width - 1) {
-    padding-left: 15px;
-    padding-right: 15px;
+  & th.table-fixed__long-name {
+    width: 280px;
   }
 
   & .table-fixed__header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding-top: 24px;
+    & .table-fixed__table {
+      display: block;
+      width: $desktop-width;
+      margin: 0 auto;
 
-    & tr {
-      padding-top: 24px;
+      @media (max-width: $desktop-width - 1) {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+    }
+  }
+
+  & .table-fixed__body {
+    max-height: calc(100vh - 81px);
+    width: $desktop-width;
+    margin: 0 auto;
+
+    @media (max-width: $desktop-width - 1) {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+
+    & .simplebar-vertical {
+      right: 0;
     }
   }
 
