--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,7 +9,7 @@
 @import "plugins/swiper";
 @import "plugins/slimselect";
 @import "plugins/nouislider";
-@import "plugins/perfect-scrollbar";
+@import "plugins/simplebar";
 
 /* Блоки */
 @import "blocks/section";
