--- a/source/sass/blocks/table-popup.scss
+++ b/source/sass/blocks/table-popup.scss
@@ -5,16 +5,20 @@
 .table-popup__content {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
 }
 
 .table-popup__bar {
-  // max-width: $desktop-width;
   margin: 0 auto;
   height: 24px;
 
+  @media (max-width: $desktop-width - 1) {
+    height: 48px;
+  }
+
   & button {
     position: fixed;
-    top: 24px;
+    top: 12px;
     right: 24px;
     z-index: 20;
 
@@ -24,9 +28,9 @@
     }
   }
 
-  @media (max-width: $tablet-width - 1) {
+  @media (max-width: $desktop-width - 1) {
     & button {
-      top: 12px;
+      top: 0;
       right: 12px;
     }
   }
