--- a/source/sass/blocks/poll.scss
+++ b/source/sass/blocks/poll.scss
@@ -19,30 +19,28 @@
 }
 
 .poll__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 20px;
   margin: 0;
-  padding: 40px 0 4px;
+  padding: 40px 0 0;
   list-style: none;
   text-align: left;
 
   @media (max-width: $desktop-width - 81) {
-    flex-wrap: wrap;
-    padding-bottom: 21px;
+    grid-template-columns: 1fr 1fr;
   }
 
   @media (max-width: $tablet-width - 1) {
+    display: block;
     padding-top: 24px;
-    padding-bottom: 14px;
   }
 }
 
 .poll__item {
   position: relative;
-  flex-shrink: 0;
-  width: 32.1%;
-  margin-bottom: 20px;
+  display: block;
   padding: 24px;
   padding-bottom: 29px;
   background-color: var(--color-bg-secondary, $color-bg);
@@ -51,13 +49,12 @@
   cursor: pointer;
   transition: box-shadow $style-change-duration linear;
 
-  @media (max-width: $desktop-width - 81) {
-    width: calc(50% - 10px);
-  }
-
   @media (max-width: $tablet-width - 1) {
-    width: 100%;
     min-height: 158px;
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
   }
 
   &::before {
@@ -162,8 +159,16 @@
 }
 
 .poll__button {
+  width: 360px;
+  max-width: 360px;
+  margin-top: 20px;
   font-size: rem(14px);
   line-height: 1.35;
+
+  @include mobile {
+    width: 100%;
+    margin-top: 48px;
+  }
 }
 
 .poll__hide {
@@ -213,30 +218,7 @@ span.poll__hide {
     padding-bottom: 24px;
 
     @media (max-width: $tablet-width - 1) {
-      width: calc(100% / 2 - 10px);
       min-height: 158px;
-    }
-
-    @media (max-width: 600px) {
-      width: 100%;
-    }
-
-    @media (max-width: $mobile-max-width) {
-      margin-bottom: 17px;
-    }
-  }
-
-  & .poll__button {
-    width: 360px;
-    margin-top: 0;
-
-    @media (max-width: $tablet-width - 1) {
-      margin-top: 14px;
-    }
-
-    @media (max-width: $mobile-max-width) {
-      width: 100%;
-      margin-top: 10px;
     }
   }
 }
