--- a/source/sass/blocks/paginator.scss
+++ b/source/sass/blocks/paginator.scss
@@ -1,7 +1,8 @@
 .paginator {
   display: flex;
   flex-wrap: wrap;
-  width: 545px;
+  justify-content: center;
+  width: 100%;
   margin: 0 auto;
   margin-top: 40px;
   margin-bottom: 80px;
@@ -9,12 +10,7 @@
   font-size: rem(15px);
   line-height: rem(27px);
 
-  @media (max-width: 617px) {
-    width: 312px;
-  }
-
   @media (max-width: 400px) {
-    width: 288px;
     margin-top: 32px;
   }
 }
