Обновляет проект до версии бэка

--- a/source/sass/blocks/news-notice.scss
+++ b/source/sass/blocks/news-notice.scss
@@ -145,6 +145,9 @@
   height: 2.7em;
   overflow: hidden;
   text-overflow: ellipsis;
+  hyphens: auto;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 
   @media (max-width: $desktop-width - 81) {
     height: auto;
