--- a/source/sass/blocks/answers.scss
+++ b/source/sass/blocks/answers.scss
@@ -210,6 +210,9 @@
 
   & p {
     margin: 0;
+    hyphens: auto;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
 
     @include main-text;
     line-height: rem(27px);
