--- a/source/sass/blocks/page-content.scss
+++ b/source/sass/blocks/page-content.scss
@@ -1,6 +1,7 @@
 .page-content {
-  padding-top: 40px;
   min-width: $mobile-width;
+  padding-top: 40px;
+  padding-bottom: 120px;
 }
 
 .page-content__title {
@@ -14,23 +15,25 @@
 .page-content .list-btn {
   display: block;
   width: 360px;
-  margin: 24px auto 40px;
+  margin: 24px auto 0;
 }
 
 .page-content__archive-link {
-  // margin-top: 80px;
-  margin-bottom: 80px;
+  margin-top: 80px;
 }
 
 
 @include tablet {
+  .page-content {
+    padding-bottom: 88px;
+  }
+
   .page-content .list-btn {
     margin-top: 48px;
   }
 
   .page-content__archive-link {
-    // margin-top: 64px;
-    margin-bottom: 88px;
+    margin-top: 64px;
   }
 }
 
@@ -38,6 +41,7 @@
 @include mobile {
   .page-content {
     padding-top: 24px;
+    padding-bottom: 64px;
   }
 
   .page-content__title {
@@ -50,12 +54,10 @@
     width: 100%;
     max-width: 360px;
     margin-top: 40px;
-    margin-bottom: 32px;
   }
 
   .page-content__archive-link {
-    // margin-top: 57px;
-    margin-bottom: 64px;
+    margin-top: 56px;
   }
 }
 
