--- a/source/sass/blocks/poll.scss
+++ b/source/sass/blocks/poll.scss
@@ -20,7 +20,7 @@
 
 .poll__list {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, calc((100% - 40px)/3));
   grid-template-rows: auto;
   grid-gap: 20px;
   margin: 0;
@@ -29,7 +29,7 @@
   text-align: left;
 
   @media (max-width: $desktop-width - 81) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, calc((100% - 20px)/2));
   }
 
   @media (max-width: $tablet-width - 1) {
@@ -139,6 +139,9 @@
   padding: 0;
   font-size: rem(16px);
   line-height: 1.35;
+  hyphens: auto;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .poll__link {
