--- a/source/sass/blocks/project-page.scss
+++ b/source/sass/blocks/project-page.scss
@@ -1,7 +1,3 @@
-.project-page {
-  padding-bottom: 122px;
-}
-
 .project-page__container,
 .project-page__survey {
   width: 740px;
@@ -69,7 +65,6 @@
 
 .project-page__survey {
   padding: 23px 24px;
-  margin-bottom: 40px;
   background-color: var(--color-bg-secondary, $color-bg);
   border-radius: $border-radius;
 }
@@ -92,6 +87,7 @@
   width: 372px;
   padding-right: 20px;
   padding-left: 20px;
+  margin-top: 40px;
   font-size: rem(14px);
   line-height: rem(19px);
 
@@ -118,10 +114,6 @@
 
 
 @include tablet {
-  .project-page {
-    padding-bottom: 88px;
-  }
-
   .project-page__container,
   .project-page__survey {
     width: 100%;
@@ -154,10 +146,6 @@
 
 
 @include mobile {
-  .project-page {
-    padding-bottom: 64px;
-  }
-
   .project-page__meta,
   .project-page__panel,
   .project-page__text,
@@ -244,7 +232,6 @@
 
   .project-page__survey {
     padding: 23px 16px;
-    margin-bottom: 32px;
   }
 
   .project-page__survey-btn {
@@ -258,7 +245,7 @@
     display: block;
     width: 100%;
     max-width: 360px;
-    margin: 0 auto;
+    margin: 32px auto 0;
   }
 
   .project-page__mobile-hidden {
