--- a/source/sass/blocks/widget.scss
+++ b/source/sass/blocks/widget.scss
@@ -121,6 +121,11 @@
                 width: 360px;
                 height: 48px;
                 padding: 0 20px;
+
+                @media (max-width: $tablet-width + 100) {
+                    width: 100%;
+                    height: 48px;
+                }
                 .ss-value {
                     padding: 0;
                     margin: 0;
@@ -203,17 +208,26 @@
             display: block;
             margin-bottom: 0px;
         }
-        input {                
-            background: #fff;
-            border: 1px solid #e3e8ee;
-            -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-            border-radius: 5px;
+        &_item {
             width: 360px;
-            height: 48px;
-            padding: 0 20px;
+            display: inline-block;
             margin-right: 20px;
+            position: relative;
 
+            input {                
+                background: #fff;
+                border: 1px solid #e3e8ee;
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+                border-radius: 5px;
+                width: 360px;
+                height: 48px;
+                padding: 0 20px;
+                //margin-right: 20px;
+                @media (max-width: $tablet-width + 100) {
+                    width: 100%;
+                }
+            }
             @media (max-width: $tablet-width + 100) {
                 margin-right: 10px;
                 width: 50%;
@@ -236,6 +250,7 @@
                 }
             }
         }
+
     }
 
     &__preview {
@@ -473,11 +488,33 @@
     }
     .error {
         margin-top: 10px;
-        padding: 10px 20px;
-        background: #fb7272;
-        border-radius: 5px;
+        padding: 10px 10px;
+        background: #e55050;
+        border-radius: 3px;
+        text-align: center;
         color: #fff;
         width: 360px;
+        position: absolute;
+        font-size: 13px;
+        z-index: 99;
+
+        @media (max-width: $tablet-width + 100) {
+            width: 100%;
+        }
+
+        &:before {
+            content: '';
+            width: 12px;
+            height: 12px;
+            background: #e55050;
+            position: absolute;
+            top: -4px;
+            right: 0;
+            left: 0;
+            margin: 0 auto;
+            transform: rotate(45deg);
+            border-radius: 2px;
+        }
     }
 }
 
