--- a/source/sass/blocks/news-item.scss
+++ b/source/sass/blocks/news-item.scss
@@ -60,6 +60,7 @@
     max-width: 100%;
     padding-right: 380px;
     padding-bottom: 48px;
+    background-image: none;
 
     @media (max-width: $desktop-width - 1) {
       padding-right: 0;
