--- a/source/sass/blocks/table-fixed.scss
+++ b/source/sass/blocks/table-fixed.scss
@@ -37,7 +37,7 @@
 .table-fixed table {
   // display: block;
   width: 100%;
-  min-width: $desktop-width;
+  // min-width: $desktop-width;
   // table-layout: fixed;
   border-collapse: collapse;
 
