--- a/source/sass/blocks/discussion-list.scss
+++ b/source/sass/blocks/discussion-list.scss
@@ -4,6 +4,18 @@
   @media (max-width: $tablet-width - 1) {
     margin-top: 0;
   }
+
+  & h2 {
+    margin-top: 0;
+    margin-bottom: 24px;
+    font-weight: 400;
+    font-size: rem(30px);
+    line-height: rem(36px);
+
+    @media (max-width: $tablet-width - 1) {
+      margin-bottom: 10px;
+    }
+  }
 }
 
 .discussion-list__button {
