--- a/source/sass/blocks/location-switcher.scss
+++ b/source/sass/blocks/location-switcher.scss
@@ -7,7 +7,7 @@
   max-width: 350px;
   margin-bottom: 0;
 
-  &:first-child {
+  &:first-of-type {
     position: relative;
     margin-right: 68px;
 
