--- a/source/sass/blocks/discussion-list.scss
+++ b/source/sass/blocks/discussion-list.scss
@@ -1,19 +1,21 @@
 .discussion-list {
-  margin-top: 24px;
-
-  @media (max-width: $tablet-width - 1) {
-    margin-top: 0;
-  }
+  margin-top: 14px;
 
   & h2 {
     margin-top: 0;
-    margin-bottom: 24px;
+    margin-bottom: 0;
+    padding-bottom: 24px;
     font-weight: 400;
     font-size: rem(30px);
     line-height: rem(36px);
 
+    background-image: linear-gradient(var(--color-stroke, $light-grey), var(--color-stroke, $light-grey));
+    background-position: left bottom;
+    background-repeat: no-repeat;
+    background-size: 100% 1px;
+
     @media (max-width: $tablet-width - 1) {
-      margin-bottom: 10px;
+      padding-bottom: 32px;
     }
   }
 }
