--- a/source/components/button-star.html
+++ b/source/components/button-star.html
@@ -1,6 +1,7 @@
-<button class="button-star" type="button">
-  <span class="visually-hidden">Добавить в избранное</span>
+<button class="button-star" type="button" data-tooltip="В избранное" data-flow="down">
   <svg width="20" height="20" viewBox="0 0 20 20">
     <use xlink:href="img/sprite.svg#icon-star"></use>
   </svg>
+
+  <span class="button-star__text">В избранное</span>
 </button>
