--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -81,3 +81,15 @@
     @content;
   }
 }
+
+
+@mixin visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  border: 0;
+}
