--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -42,6 +42,7 @@
 @import "blocks/video-link";
 @import "blocks/special-popup";
 @import "blocks/status-info";
+@import "blocks/info-tooltip";
 @import "blocks/main-empty";
 
 // main page
