--- a/source/sass/blocks/news-item.scss
+++ b/source/sass/blocks/news-item.scss
@@ -13,12 +13,9 @@
   align-items: center;
   margin-bottom: 12px;
 
-  @media (max-width: $tablet-width - 1) {
-    align-items: flex-start;
-  }
-
   @media (max-width: $mobile-max-width) {
     flex-direction: column;
+    align-items: flex-start;
     margin-bottom: 12px;
   }
 
@@ -47,8 +44,8 @@
     height: 24px;
   }
 
-  @media (max-width: $tablet-width - 1) {
-    display: none;
+  @media (max-width: $mobile-max-width) {
+    margin-bottom: 0;
   }
 }
 
