--- a/source/sass/blocks/gallery-popup.scss
+++ b/source/sass/blocks/gallery-popup.scss
@@ -115,26 +115,25 @@
 
 
 @include tablet {
+  .gallery-popup {
+    background-color: rgba(255, 255, 255, 0);
+  }
+
   .gallery-popup .popup__container {
+    display: flex;
     box-sizing: border-box;
-    padding: 72px $tablet-padding 108px;
+  }
+
+  .gallery-popup .popup__overlay {
+    display: block;
   }
 
   .gallery-popup .popup__bar {
-    position: fixed;
-    z-index: 2;
-    right: 0;
-    left: 0;
     background-color: var(--color-bg-main, $white);
 
-    &--top {
-      top: 0;
-    }
-
     &--bottom {
-      bottom: 0;
       justify-content: flex-start;
-      padding: 32px $tablet-padding 40px;
+      padding: 32px $tablet-padding 24px;
     }
   }
 
@@ -143,6 +142,7 @@
     width: 100%;
     height: 100%;
     border-radius: 0;
+    padding: 0 $tablet-padding 0;
   }
 
   .gallery-popup__frame {
@@ -188,12 +188,32 @@
 
 
 @include mobile {
+  .gallery-popup {
+    background-color: var(--color-bg-main, $white);
+  }
+
   .gallery-popup .popup__container {
+    display: block;
     padding: 60px $mobile-padding 92px;
   }
 
+  .gallery-popup .popup__overlay {
+    display: none;
+  }
+
   .gallery-popup .popup__bar {
+    position: fixed;
+    z-index: 2;
+    right: 0;
+    left: 0;
+
+    &--top {
+      top: 0;
+    }
+
     &--bottom {
+      bottom: 0;
+      justify-content: flex-start;
       padding: 24px $mobile-padding 32px;
     }
   }
