--- a/source/sass/blocks/page-top.scss
+++ b/source/sass/blocks/page-top.scss
@@ -8,6 +8,14 @@
     align-items: flex-start;
     justify-content: flex-start;
   }
+
+  &--wrapper {
+    @media (max-width: 900px) {
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+  }
 }
 
 .page-top__form-wrapper {
@@ -32,6 +40,40 @@
 
 .page-top__checkbox {
   margin-bottom: 0;
+}
+
+.page-top__action-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 20px;
+
+  & .page-top__nav {
+    width: auto;
+    margin-left: 0;
+  }
+
+  @media (max-width: 900px) {
+    margin-left: 0;
+    margin-top: 24px;
+  }
+
+  @media (max-width: 700px) {
+    margin-top: 0;
+  }
+
+  @media (max-width: 540px) {
+    width: 100%;
+    flex-direction: column;
+
+    & .page-top__nav {
+      margin-top: 0;
+    }
+
+    & .page-top__form-wrapper {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
 
 @media print {
