--- a/source/sass/blocks/user-menu.scss
+++ b/source/sass/blocks/user-menu.scss
@@ -122,6 +122,7 @@
     display: block;
     width: 100%;
     padding-left: 54px;
+    padding-right: 24px;
     border-radius: 0;
     box-shadow: none;
   }
@@ -146,5 +147,6 @@
 
   .user-menu__list {
     padding-left: 46px;
+    padding-right: 16px;
   }
 }
