--- a/source/sass/blocks/page-top.scss
+++ b/source/sass/blocks/page-top.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
 
-  @media (max-width: 700px) {
+  @media (max-width: $tablet-width) {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
@@ -23,18 +23,12 @@
   background-color: var(--color-bg-secondary, $color-bg);
   border-radius: 5px;
 
-  @media (max-width: $tablet-width - 1) {
-    padding: 16px 40px;
-  }
-
-  @media (max-width: 700px) {
-    margin-top: 24px;
-  }
-
-  @media (max-width: $mobile-max-width) {
+  @media (max-width: $tablet-width) {
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-top: 24px;
+    padding: 16px 40px;
   }
 }
 
@@ -53,12 +47,25 @@
   }
 
   @media (max-width: 900px) {
+    width: 100%;
     margin-left: 0;
     margin-top: 24px;
+
+    & .page-top__nav {
+      flex-grow: 1;
+    }
   }
 
-  @media (max-width: 700px) {
+  @media (max-width: $tablet-width) {
     margin-top: 0;
+
+    & .page-top__nav {
+      width: auto;
+    }
+
+    & .page-top__form-wrapper {
+      width: auto;
+    }
   }
 
   @media (max-width: 540px) {
