--- a/source/sass/blocks/activity-tabs.scss
+++ b/source/sass/blocks/activity-tabs.scss
@@ -21,13 +21,13 @@
 .activity-tabs__list {
   @include list-reset;
   display: flex;
-  flex-wrap: no-wrap;
+  flex-wrap: nowrap;
   width: 100%;
   overflow-x: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
 
-  &::-webkit-scrollbar {
+  &:-webkit-scrollbar {
     width: 0;
   }
 
@@ -48,10 +48,6 @@
   background-repeat: no-repeat;
   background-size: 100% 1px;
 
-  @media (max-width: 815px) {
-    margin-top: -19px;
-  }
-
   @media (max-width: 800px) {
     width: calc(100% - 48px);
   }
@@ -68,12 +64,6 @@
   &:last-child {
     padding-right: 40px;
   }
-
-  // @include tablet {
-  //   &--active:not(:last-child) {
-  //     order: -1;
-  //   }
-  // }
 }
 
 .activity-tabs__link {
