--- a/source/sass/blocks/location-switcher.scss
+++ b/source/sass/blocks/location-switcher.scss
@@ -72,7 +72,7 @@
     padding: 25px 0 23px;
     margin-bottom: 0;
 
-    &:first-child {
+    &:first-of-type {
       margin-right: 0;
 
       &::after {
