Исправляет перенос длинных слов

--- a/source/sass/blocks/composite-poll.scss
+++ b/source/sass/blocks/composite-poll.scss
@@ -25,24 +25,21 @@
 
   @include main-text;
   line-height: rem(27px);
+  hyphens: auto;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 
   background-color: var(--color-bg-secondary, $color-bg);
   border-radius: 5px;
+  overflow: hidden;
 
   @media (max-width: $mobile-max-width) {
     padding: 24px;
   }
 
   & a {
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-
     @media (max-width: $tablet-width - 1) {
       display: block;
-      width: 100%;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
     }
   }
 }
